opam-version: "2.0"
version: "0.1.0"
synopsis: "TODO"
license: "BSD-1-Clause"
maintainer: "Kate <kit-ty-kate@outlook.com>"
authors: [
  "Kate <kit-ty-kate@outlook.com>"
]
homepage: "https://github.com/kit-ty-kate/miou_io"
dev-repo: "git+https://github.com/kit-ty-kate/miou_io.git"
bug-reports: "https://github.com/kit-ty-kate/miou_io/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.0.0"}
  "miou" {>= "0.3.0"}
]
